Adding the vessel, changing beach items and creating Formian groups.

--- a/src/templatefiles/templates/dnd/concrete/characters/stats/tainted-warrior.html
+++ b/src/templatefiles/templates/dnd/concrete/characters/stats/tainted-warrior.html
@@ -4,7 +4,7 @@
 {% block initiative %}+3{% endblock %}
 {% block speed %}30 (fly 40 average){% endblock %}
 {% block ac %}18 (t=13 ff=15){% endblock %}
-{% block attacks %}Sting +11, 2x claws +9, bite +9{% endblock %}
+{% block attacks %}Sting +11/+6, 2x claws +9, bite +9{% endblock %}
 {% block damage %}2d4+4 + FortDC14 1d6 Str (sting+poison), 1d6+2 (claws), 1d4+2 (bite){% endblock %}
 {% block face-reach %}5ft.{% endblock %}
 {% block special-attacks %}
@@ -39,7 +39,7 @@
 {% endblock %}
 {% block skills %}Climb +10, Hide +10, Jump +14, Listen +8, Move Silently +10, (+3 following tracks), Tumble +12{% endblock %}
 {% block feats %}Dodge, Multiattack{% endblock %}
-{% block grapple %}+19{% endblock %}
+{% block grapple %}+20{% endblock %}
 {% block gear %}{% endblock %}
 
 {% block descriptions %}
