--- a/src/templatefiles/templates/dnd/concrete/characters/stats/tainted-worker.html
+++ b/src/templatefiles/templates/dnd/concrete/characters/stats/tainted-worker.html
@@ -4,7 +4,7 @@
 {% block initiative %}+2{% endblock %}
 {% block speed %}30 (fly 40 average){% endblock %}
 {% block ac %}17 (t=13 ff=15){% endblock %}
-{% block attacks %}+7{% endblock %}
+{% block attacks %}+7/+2{% endblock %}
 {% block damage %}1d4+2{% endblock %}
 {% block face-reach %}5ft.{% endblock %}
 {% block special-attacks %}
