--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/beach-right.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/beach-right.html
@@ -13,7 +13,10 @@
     <ul>
         <li>3x Girallons are sitting on the headland in the trees.</li>
         <li>Their eyes are blood red and they seem grumpy (during the day).</li>
-        <li>A black golden statue in the liking of Hanuman in a lotus position is holding a flower.</li>
+        <li>
+            A black golden statue in the liking of Hanuman in a lotus position is holding a flower
+            (sleeping close to the statue vents off corruption, deprivation and charge with a +10 bonus).
+        </li>
     </ul>
 
     <p>From here the party can head to:</p>
@@ -79,7 +82,8 @@
 {% block items %}
     <p>On the beach, some belongings of a dead ranger.</p>
     <ul>
-        <li>Bow/Scimitar, +1 fire burst</li>
+        <li>Bow +1 fire burst</li>
+        <li>20 arrows</li>
         <li>Studded leather +2</li>
         <li>1x CSW</li>
     </ul>
@@ -87,10 +91,11 @@
     <ul>
         <li>A gold & black statue of a half-man half-monkey holding a flower.</li>
         <li>A black and gold book (Book of Annihilation).</li>
+        <li>Faerun Magic Shop Manual.</li>
         <li>A familiar book (spell book Kadunkle).</li>
-        <li>Inside the spell book you find some scrolls.</li>
-        <li>One vial with a potion is standing next to the statue.</li>
-        <li>As well as a sealed pot.</li>
+        <li>Inside the spell book you find some scrolls (transmute rock to mud, dominate person, swim, clairaudience/clairvoyance, veil).</li>
+        <li>One vial with a potion is standing next to the statue (potion of restoration)</li>
+        <li>As well as a sealed pot (full with sugar)</li>
     </ul>
 {% endblock %}
 
