Updating generic hive things.

--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/hive-0.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/hive-0.html
@@ -1,8 +1,12 @@
 {% extends "dnd/abstract/game_element.html" %}
 {% load staticfiles %}
 
-{% block title %}No Title{% endblock %}
-{% block summary %}No summary{% endblock %}
+{% block title %}Hive level 0{% endblock %}
+{% block summary %}
+    <p>
+        The main level of the hive with most activity and patrols.
+    </p>
+{% endblock %}
 
 {% block events %}
     <p>no events</p>
@@ -32,7 +36,7 @@
 {% endblock %}
 
 {% block achievements %}
-    <p>no achievements</p>
+    <p>Behold the vessel and its light directly to <a href="../../obstacles/01-born-again/04-enlightment.html">become enlightened</a>.</p>
 {% endblock %}
 
 {% block creatures %}
