--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/hive-2.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/hive-2.html
@@ -1,8 +1,8 @@
 {% extends "dnd/abstract/game_element.html" %}
 {% load staticfiles %}
 
-{% block title %}No Title{% endblock %}
-{% block summary %}No summary{% endblock %}
+{% block title %}Hive level 2{% endblock %}
+{% block summary %}A place for Myrmarchs and warriors to oversee the hive surroundings.{% endblock %}
 
 {% block events %}
     <p>no events</p>
@@ -74,6 +74,6 @@
 {% endblock %}
 
 {% block misc %}
-    <p><img src="{% static "pics/hive-0.png" %}" alt="hive level 0"/></p>
+    <p>no misc</p>
 {% endblock %}
 
