--- a/src/templatefiles/templates/dnd/concrete/groups/Phase-spider.html
+++ b/src/templatefiles/templates/dnd/concrete/groups/Phase-spider.html
@@ -1,30 +1,32 @@
 {% extends "dnd/abstract/base.html" %}
 
 {% block content %}
+    <h3>Phase spider</h3>
+
     <p>They all speak: undercommon, common, elven, drow sign language</p>
 
-    <h3>Filhrys (thin mastermind)</h3>
+    <h4>Filhrys (thin mastermind)</h4>
     <ul>
         <li>Death attack: 24 damage, FortDC 21 (DC24 heightened)</li>
         <li>Coup de Grace: 13 damage, FortDC 23</li>
     </ul>
     {% include "dnd/concrete/characters/stats/filhrys.html" %}
 
-    <h3>Gorar (thunder secret)</h3>
+    <h4>Gorar (thunder secret)</h4>
     <ul>
         <li>Death attack: 32 damage, FortDC 20</li>
         <li>Coup de Grace: 39 damage, FortDC 49</li>
     </ul>
     {% include "dnd/concrete/characters/stats/gorar.html" %}
 
-    <h3>Dhaunnar (seducive ghost)</h3>
+    <h4>Dhaunnar (seducive ghost)</h4>
     <ul>
         <li>Death attack: 32 damage, FortDC 23</li>
         <li>Coup de Grace: 49 damage, FortDC 59</li>
     </ul>
     {% include "dnd/concrete/characters/stats/dhaunnar.html" %}
 
-    <h3>Illiamarra (devoted queen)</h3>
+    <h4>Illiamarra (devoted queen)</h4>
     <ul>
         <li>Death attack: 20 damage, FortDC 21</li>
         <li>Coup de Grace: 25 damage, FortDC 35</li>
