--- a/src/templatefiles/templates/dnd/concrete/obstacles/00-prologue/00-events-so-far.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/00-prologue/00-events-so-far.html
@@ -1,12 +1,14 @@
 {% extends "dnd/abstract/base.html" %}
 
 {% block content %}
-<h2>Book 1: A Snake Invasion</h2>
+<h3>Book 1: A Snake Invasion</h3>
 <p>Events</p>
 <ol>
-    <li>Fell out of the hell into Faerun</li>
-    <li>Quest for mysterious disappearances of people and vicious snake attacks</li>
-    <li>Defeated Ekanz (an ancient Yuan-Ti tiran trying to get back into power)</li>
+    <li>Fell out of the hell into Faerun.</li>
+    <li>Quest for mysterious disappearances of people and vicious snake attacks.</li>
+    <li>Passed through underground Lizardvolk village.</li>
+    <li>Passed through wood protected by Elves.</li>
+    <li>Defeated Ekanz (an ancient Yuan-Ti tiran trying to get back into power).</li>
 </ol>
 
 <p>Side quests</p>
@@ -18,9 +20,10 @@
 <p>Loose ends</p>
 <ol>
     <li>Why did Olivet not simply rob the party? What is an abandoned Gold Dwarf mine good for?</li>
+    <li>How is it going with the Elves and Gold Dwarves?</li>
 </ol>
 
-<h2>Book 2: A Noble Twist</h2>
+<h3>Book 2: A Noble Twist</h3>
 <p>Events</p>
 <ol>
     <li>Asked by lord of Reth to escort caravans which got robbed</li>
@@ -51,13 +54,13 @@
     <li>What happened to Lokahmee and how does he feel about his tower being destroyed?</li>
 </ol>
 
-<h2>Aftermath</h2>
+<h3>Aftermath</h3>
 <ul>
     <li>The Book of Annihilation ends up after Morgi studied it for a while.</li>
     <li>The manual for running a Faerun Magic Shop is taken by Kadunkle for further researching</li>
 </ul>
 
-<h2>About time</h2>
+<h3>About time</h3>
 <p>
     Book 3: A Trade Empire, tries to become a prequel to the books by Paul Kemp.
     In order to do that it needs to happen around 300 years before these books.
@@ -65,5 +68,8 @@
     I think the chronology of the adventure of the party doesn't suffer too much from this,
     since history of Sembia and Cormyr has not been touched so far.
 </p>
+
+<h3>Begin :)</h3>
+<p><a href="01-kadunkle-comes-to-visit.html">Kadunkle comes to visit</a></p>
 
 {% endblock %}
