--- a/src/templatefiles/templates/dnd/concrete/obstacles/00-prologue/01-kadunkle-comes-to-visit.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/00-prologue/01-kadunkle-comes-to-visit.html
@@ -1,12 +1,10 @@
 {% extends "dnd/abstract/obstacle.html" %}
 
-{% block todo %}How much gold can they earn? Fill out blanks in Kadunkle handout!{% endblock %}
-
 {% block title %}Kadunkle comes to visit{% endblock %}
 {% block summary %}Kadunkle introduces the quest.{% endblock %}
 
 {% block misc %}
-<p>Handout info[0] to Kadunkle as preparation.</p>
+<p>Handout 01-Kad-Campaign-background.odt to Kadunkle as preparation.</p>
 {% endblock %}
 
 {% block events %}
