--- a/src/templatefiles/templates/dnd/concrete/obstacles/00-prologue/02-killed-in-the-night.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/00-prologue/02-killed-in-the-night.html
@@ -1,12 +1,10 @@
 {% extends "dnd/abstract/obstacle.html" %}
 
-{% block todo %}What are the Phase Spider stats? Fill out and correct the red texts in the info text.{% endblock %}
-
 {% block title %}A midnight murder{% endblock %}
 {% block summary %}The Phase Spider comes to assassinate the party.{% endblock %}
 
 {% block misc %}
-<p>Read info[1]</p>
+<p>Handover handout 03-All-Nightly-visitors.odt</p>
 {% endblock %}
 
 {% block events %}
@@ -14,6 +12,7 @@
     <li>Alex is assassinated as described in the text</li>
     <li>Kadunkle and Morgi suffer a similar fate</li>
     <li>Faradrim is spared</li>
+    <li><a href="../../groups/Phase-spider.html">Lookup damage</a></li>
 </ol>
 {% endblock %}
 
