--- a/src/templatefiles/templates/dnd/concrete/obstacles/00-prologue/05-a-year-goes-by.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/00-prologue/05-a-year-goes-by.html
@@ -1,16 +1,14 @@
 {% extends "dnd/abstract/obstacle.html" %}
 
-{% block todo %}Ask the player for his contribution.{% endblock %}
-
 {% block title %}A year goes by{% endblock %}
 {% block summary %}Faradrim is on his own for a year.{% endblock %}
 
 {% block misc %}
 <p>Up to Faradrim what happens. After a year his ship gets ship wrecked</p>
-<p>Read out info[2]</p>
+<p>Handout 03-All-It-is-time.odt</p>
 {% endblock %}
 
 {% block achievements %}
-<p>Continue with <a href="../01-washed-ashore/00-leaving-heaven-or-hell.html">washed ashore</a></p>
+<p>Continue with chapter <a href="../01-born-again/00-leaving-heaven-or-hell.html">born again</a>.</p>
 {% endblock %}
 
