--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/beach-right.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/beach-right.html
@@ -33,7 +33,7 @@
 {% endblock %}
 
 {% block creatures %}
-    <p>no creatures</p>
+    <p>On the overland you'll find <a href="../../monsters/Girallon+tainted.html">tainted Girallons</a></p>
 {% endblock %}
 
 {% block traps %}
