--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/hive-0.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/hive-0.html
@@ -29,7 +29,7 @@
         <li>6 = 1x Taskmaster + 1x Myrmarch</li>
         <li>7 = 1x Taskmaster</li>
         <li>8 = Chamber of the Vessel + taskmaster.</li>
-        <li>9 = East entrance guard post</li>
+        <li>9 = Prison</li>
         <li>10 = Storage</li>
         <li>11 = Storage</li>
         <li>12 = 2x Myrmarch</li>
@@ -48,11 +48,11 @@
 {% block creatures %}
     <p>The following creatures can be found in the Hive</p>
     <ul>
-        <li><a href="../../characters/Formian+tainted-worker.html">Tainted workers</a></li>
-        <li><a href="../../characters/Formian+tainted-warrior.html">Tainted warriors</a></li>
-        <li><a href="../../characters/Formian+tainted-taskmaster.html">Tainted taskmasters</a></li>
-        <li><a href="../../characters/Formian+tainted-myrmarch.html">Tainted myrmarchs</a></li>
-        <li><a href="../../characters/Ankheg-vessel+swallowed-hanumans-soul.html">Ankheg vessel</a></li>
+        <li><a href="../../monsters/Formian+tainted-worker.html">Tainted workers</a></li>
+        <li><a href="../../monsters/Formian+tainted-warrior.html">Tainted warriors</a></li>
+        <li><a href="../../monsters/Formian+tainted-taskmaster.html">Tainted taskmasters</a></li>
+        <li><a href="../../monsters/Formian+tainted-myrmarch.html">Tainted myrmarchs</a></li>
+        <li><a href="../../monsters/Ankheg-vessel+swallowed-hanumans-soul.html">Ankheg vessel</a></li>
     </ul>
 {% endblock %}
 
