--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/hive-1.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/hive-1.html
@@ -23,6 +23,7 @@
     <p>
         All area's on this level are sleeping quarters for warriors and workers (they mix).
         Taskmasters sleep with the monsters on level 0 and Myrmarchs also sleep on level 0.
+        There is always one patrol a sleep on this level.
         During the night this level is abandoned except for a few workers that can't sound the alarm really.
         Chamber 8 is the same chamber as on level 0, but 15ft higher.
     </p>
@@ -35,11 +36,11 @@
 {% block creatures %}
     <p>The following creatures can be found in the Hive</p>
     <ul>
-        <li><a href="../../characters/Formian+tainted-worker.html">Tainted workers</a></li>
-        <li><a href="../../characters/Formian+tainted-warrior.html">Tainted warriors</a></li>
-        <li><a href="../../characters/Formian+tainted-taskmaster.html">Tainted taskmasters</a></li>
-        <li><a href="../../characters/Formian+tainted-myrmarch.html">Tainted myrmarchs</a></li>
-        <li><a href="../../characters/Ankheg-vessel+swallowed-hanumans-soul.html">Ankheg vessel</a></li>
+        <li><a href="../../monsters/Formian+tainted-worker.html">Tainted workers</a></li>
+        <li><a href="../../monsters/Formian+tainted-warrior.html">Tainted warriors</a></li>
+        <li><a href="../../monsters/Formian+tainted-taskmaster.html">Tainted taskmasters</a></li>
+        <li><a href="../../monsters/Formian+tainted-myrmarch.html">Tainted myrmarchs</a></li>
+        <li><a href="../../monsters/Ankheg-vessel+swallowed-hanumans-soul.html">Ankheg vessel</a></li>
     </ul>
 {% endblock %}
 
