--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/abandoned-village.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/abandoned-village.html
@@ -1,12 +1,12 @@
 {% extends "dnd/abstract/place.html" %}
 
-{% block title %}Inland center{% endblock %}
+{% block title %}Abandoned village{% endblock %}
 {% block summary %}No summary{% endblock %}
 
 {% block todo %}
     Undergrowth: Vines, roots, and short bushes cover much of the ground in a forest. A space covered with light undergrowth costs 2 squares of movement to move into, and it provides concealment. Undergrowth increases the DC of Tumble and Move Silently checks by 2 because the leaves and branches get in the way.
 
-    Heavy undergrowth costs 4 squares of movement to move into, and it provides concealment with a 30% miss chance (instead of the usual 20%). It increases the DC of Tumble and Move Silently checks by 5. Heavy undergrowth is easy to hide in, granting a +5 circumstance bonus on Hide checks. Running and charging are impossible. Squares with undergrowth are often clustered together. Undergrowth and trees aren’t mutually exclusive; it’s common for a 5-foot square to have both a tree and undergrowth.
+
 
 {% endblock %}
 
