--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/inland-right.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/inland-right.html
@@ -54,7 +54,11 @@
 {% endblock %}
 
 {% block conditions %}
-    <p>Only possible to proceed with a slashing weapon and only 5ft a turn.</p>
+    <p>
+        Heavy undergrowth costs 4 squares of movement to move into, and it provides concealment with a 30% miss chance (instead of the usual 20%).
+        It increases the DC of Tumble and Move Silently checks by 5.
+        Heavy undergrowth is easy to hide in, granting a +5 circumstance bonus on Hide checks.
+    </p>
 {% endblock %}
 
 {% block knowledges %}
