Translate taint effects.

--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/overview.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/overview.html
@@ -68,37 +68,47 @@
                     Hunger after 3 days + Con hours: every hour FortDC10 + 1 for each check.
                     Damage: 1d6 non-lethal + fatigued, die when unconscious.
                 </li>
+                <li>
+                    Sleep: You have the feeling you don't get enough sleep.
+                    This is a self-fulfilling prophecy.
+                    You are always fatigued, no matter how long you sleep.
+                </li>
+                <li>
+                    Breath: You have the feeling that you're lacking air during strenuous activity.
+                    This is a self-fulfilling prophecy.
+                    You are staggered every 3 rounds during combat.
+                </li>
+                <li>
+                    Sex: You can't think about anything but sexs, even when you shouldn't.
+                    -2 pentalty on attacks, damage, skills.
+                </li>
             </ul>
-
-            Met eten en drinken als urge begin je nu te verlangen naar rauw vlees en bloed. Je wilt niets anders meer.
-            Dorst: na 1 dag + Con hours, elk uur FortDC10 +1 elke check
-            Honger: na 3 dag + Con hours, elk uur FortDC10 +1 elke check
-            Schade: 1d6 non-lethal + fatigued
-
-            Met slapen als urge heb je het idee dat je slaap tekort komt, dit is een self fulfilling prophecy.
-            Je bent fatigued hoeveel je ook slaapt.
-
-            Met ademen heb je het idee dat je lucht tekort komt, dit is een self fulfilling prophecy.
-            Bij 3e ronde van een combat of strainful activity ben je staggered.
-
-            Met seks als urge ben je constant distracted -2 skill checks
-
         </dd>
         <dt>Severe</dt>
         <dd>
-            Met eten en drinken wil je alleen nog bloed en vlees.
-            Je wordt unfriendly/hostile tegen je kameraden totdat aan je urge is voldaan.
-
-            Met slapen als urge heb je het idee dat je slaap tekort komt, dit is een self fulfilling prophecy.
-            Je bent exhausted hoeveel je ook slaapt.
-            Elk uur WillDC 15 of moet even een uurtje liggen.
-
-            Met ademen heb je het idee dat je lucht tekort komt, dit is een self fulfilling prophecy.
-            Bij 3e ronde van een combat of strainful activity begin je te hyperventileren.
-            Suffocation: 2x Con aan rondes normaal, daarna FortDC10 +1 per check
-            Schade: unconcious (start breathing normally)
-
-            Met seks als urge ben je obsessed. Je krijgt -2 op Wis en Cha
+            <ul>
+                <li>
+                    Food & drink: You only want blood and flesh.
+                    Every 4 hours you become unfriendly/hostile against everybody until you get your way.
+                </li>
+                <li>
+                    Sleep: You have the feeling you don't get enough sleep.
+                    This is a self-fulfilling prophecy.
+                    You are always exhausted, no matter how long you sleep.
+                </li>
+                <li>
+                    Breath: You have the feeling that you're lacking air during strenuous activity.
+                    This is a self-fulfilling prophecy.
+                    From the 3rd round in combat, you start to hyperventilate.
+                    This leads to suffication.
+                    Suffocation: 2x Con rounds, after that FortDC10 +1 per check
+                    Damage: unconscious (start breathing normally)
+                </li>
+                <li>
+                    Sex: You start to become obsessed with sex.
+                    -4 penalty on Wis and Cha
+                </li>
+            </ul>
         </dd>
     </dl>
 
