Change stirges and shark into standard creatures.

--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/inland-right.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/inland-right.html
@@ -11,7 +11,7 @@
     <p>
         As you go through an area where the soil is socked and practically a mud puddle.
         ListenDC10 to hear an annoying zooming sound.
-        As you look where it comes from SpotDC10 you see a huge mosquito like creature.
+        As you look where it comes from SpotDC10 you see three huge mosquito like creatures.
         You realize too late it is a distraction and can't fend off the attack from behind.
     </p>
 {% endblock %}
@@ -42,7 +42,10 @@
 {% endblock %}
 
 {% block creatures %}
-    <p>no creatures</p>
+    <p>
+        Attack is by 12 <a href="http://dndsrd.net/monstersS.html#stirge">stirges</a>.
+        Three are high in the air. The rest approaches from behind with a surprise attack.
+    </p>
 {% endblock %}
 
 {% block traps %}
