--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/sea.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/sea.html
@@ -16,7 +16,7 @@
 {% endblock %}
 
 {% block creatures %}
-    <p>Far from the coast there might be a <a href="../../monsters/Shark+dire.html">shark</a></p>
+    <p>Far from the coast there might be a <a href="http://dndsrd.net/monstersDitoDo.html#dire-shark">shark</a></p>
 {% endblock %}
 
 {% block traps %}
